--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "async": "^2.1.2",
     "autoprefixer": "^6.5.1",
+    "bower": "^1.8.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "colors": "^1.1.2",
